--- a/src/main/webapp/css/admin.css
+++ b/src/main/webapp/css/admin.css
@@ -13,7 +13,7 @@ body {
 	font-family: "黑体", sans-serif;
 	font-weight: bold;
 	font-size: 1.6rem;
-	background-color: #fff;
+	background-color: #f5f5f5;
 	color: #fff;
 }
 
