--- a/src/main/webapp/css/register.css
+++ b/src/main/webapp/css/register.css
@@ -6,10 +6,6 @@ body {
 	background-color: #f5f5f5;
 }
 
-p {
-	text-align: center;
-}
-
 h1 {
 	color: #000;
 	text-align: center;
@@ -37,9 +33,10 @@ td {
 	padding: 10px 5px;
 }
 
-input[type="text"], input[type="password"], select {
-	width: 200px;
-	height: 26px;
+input[type="text"], input[type="password"], input[type="email"], input[type="tel"]
+	{
+	width: 100%;
+	height: 28px;
 	padding: 3px 6px;
 	font-size: 14px;
 	border: 1px solid #ccc;
@@ -49,7 +46,7 @@ input[type="text"], input[type="password"], select {
 }
 
 input[type="submit"] {
-	width: 200px;
+	width: 100%;
 	height: 32px;
 	font-size: 16px;
 	color: #fff;
@@ -61,27 +58,5 @@ input[type="submit"] {
 }
 
 input[type="submit"]:hover {
-	background-color: #444;
-}
-
-.error {
-	color: red;
-	margin-top: 20px;
-	text-align: center;
-}
-
-.error-box {
-	background-color: #ffab91;
-	padding: 10px;
-	margin: auto;
-	margin-bottom: 10px;
-	border-radius: 5px;
-	width: 33%;
-	text-align: center;
-}
-
-.error-message {
-	font-size: 16px;
-	color: #f00;
-	font-size: 16px;
+	background-color: #333;
 }
