--- a/src/main/webapp/css/borrower.css
+++ b/src/main/webapp/css/borrower.css
@@ -5,8 +5,6 @@ h1 {
 	font-weight: bold;
 }
 
-
-
 table {
 	border-collapse: collapse;
 	margin: 20px 0;
@@ -36,5 +34,74 @@ tr:nth-child(odd) {
 }
 
 td {
+	text-align: center;
+}
+
+button {
+	background-color: #4ACF50;
+	border: none;
+	color: white;
+	padding: 6px;
+	text-align: center;
+	text-decoration: none;
+	display: inline-block;
+	font-size: 14px;
+	margin-bottom: 4px;
+	cursor: pointer;
+	border-radius: 5px
+}
+
+button:hover {
+	background-color: #3e8e41;
+}
+
+.showandhidediv {
+	position: fixed;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+	background-color: #fff;
+	padding: 20px;
+	border: 1px solid #ccc;
+	z-index: 9999;
+	display: none;
+	box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.1);
+}
+
+.showandhidediv label {
+	display: inline-block;
+	margin-bottom: 4px;
+	font-weight: bold;
+}
+
+.showandhidediv input[type="text"], .showandhidediv input[type="date"] {
+	width: 100%;
+	padding: 8px;
+	font-size: 14px;
+	margin-bottom: 8px;
+	border: 1px solid #ccc;
+	border-radius: 4px;
+	box-sizing: border-box;
+}
+
+.showandhidediv input[type="submit"], .showandhidediv input[type="button"]
+	{
+	background-color: #4CAF50;
+	color: white;
+	padding: 8px 16px;
+	border: none;
+	border-radius: 4px;
+	cursor: pointer;
+	margin-right: 8px;
+}
+
+.showandhidediv input[type="submit"]:hover, .showandhidediv input[type="button"]:hover
+	{
+	background-color: #3e8e41;
+}
+
+.finduser {
+	margin: 0 auto;
+	width: 60%;
 	text-align: center;
 }
